@@ -1,4 +1,8 @@
 
+	general:
+		Added support for Arch Linux.
+
+
 v0.95.12	22-May-2011
 
 	general:
